# qivis

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  annotation_taxonomy.yml  docker-compose.yml  providers.yml.example
.Claude/: scratchpad.md  (+3 more)
backend/: pyproject.toml
backend/qivis/: __init__.py  annotation_taxonomy.yml  main.py  models.py
backend/qivis/db/: __init__.py  connection.py  schema.py
backend/qivis/events/: __init__.py  projector.py  store.py
backend/qivis/export/: router.py  service.py
backend/qivis/generation/: __init__.py  context.py  divergence.py  perturbation.py  replay.py  service.py  templates.py  tokens.py
backend/qivis/importer/: merge.py  merge_router.py  models.py  router.py  schemas.py  service.py
backend/qivis/providers/: __init__.py  anthropic.py  base.py  generic_openai.py  llamacpp.py  ollama.py  openai.py  openai_compat.py  openrouter.py  registry.py
backend/qivis/rhizomes/: __init__.py  router.py  schemas.py  service.py
backend/qivis/search/: router.py  schemas.py  service.py
backend/qivis/trees/: __init__.py  router.py  schemas.py  service.py
backend/qivis/utils/: json.py
backend/scripts/: backfill_excluded_node_ids.py
backend/tests/: conftest.py  fixtures.py  test_utils_json.py
backend/tests/interlude/: test_migrations.py
backend/tests/phase0/: test_anthropic_provider.py  test_context_assembly.py  test_context_builder.py  test_db_connection.py  test_event_store.py  test_generation_endpoint.py  test_models.py  test_projector.py  test_provider_registry.py  test_providers_base.py  test_tree_crud.py
(+172 files in other folders)
